@@ -1,5 +1,8 @@
 2024-06-29  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 	* glep-mode.el (glep-mode-insert-skeleton): Update from GLEP 2,
 	specify that all dates must be in UTC.
 
